@@ -12,11 +12,28 @@ import org.junit.Test;
 
 public class SerializeTest {
 
-    public static class SerializationParser implements LambdaJ.ObjectReader, LambdaJ.SymbolTable {
-        private byte[] serialized;
+    public static class SerializationSymbolTable implements LambdaJ.SymbolTable {
         private final HashMap<String, LambdaJ.LambdaJSymbol> symbols = new HashMap<>();
 
-        public SerializationParser(byte[] serialized) {
+        @Override
+        public LambdaJ.LambdaJSymbol intern(@NotNull LambdaJ.LambdaJSymbol symbol) {
+            final LambdaJ.LambdaJSymbol prev = symbols.putIfAbsent(symbol.toString(), symbol);
+            if (prev != null) return prev;
+            return symbol;
+        }
+
+        @Override
+        public Iterator<LambdaJ.LambdaJSymbol> iterator() {
+            return symbols.values().iterator();
+        }
+    }
+
+    public static class SerializationParser implements LambdaJ.ObjectReader {
+        private LambdaJ.SymbolTable st;
+        private byte[] serialized;
+
+        public SerializationParser(LambdaJ.SymbolTable st, byte[] serialized) {
+            this.st = st;
             this.serialized = serialized;
         }
 
@@ -24,10 +41,10 @@ public class SerializeTest {
             if (o instanceof LambdaJ.ConsCell) {
                 final LambdaJ.ConsCell c = (LambdaJ.ConsCell) o;
                 if (c.car() instanceof LambdaJ.ConsCell) internSymbols(c.car());
-                else if (c.car() instanceof LambdaJ.LambdaJSymbol) c.rplaca(intern((LambdaJ.LambdaJSymbol)c.car()));
+                else if (c.car() instanceof LambdaJ.LambdaJSymbol) c.rplaca(st.intern((LambdaJ.LambdaJSymbol)c.car()));
 
                 if (c.cdr() instanceof LambdaJ.ConsCell) internSymbols(c.cdr());
-                else if (c.cdr() instanceof LambdaJ.LambdaJSymbol) c.rplacd(intern((LambdaJ.LambdaJSymbol)c.cdr()));
+                else if (c.cdr() instanceof LambdaJ.LambdaJSymbol) c.rplacd(st.intern((LambdaJ.LambdaJSymbol)c.cdr()));
             }
         }
 
@@ -44,18 +61,6 @@ public class SerializeTest {
             catch (IOException | ClassNotFoundException e) {
                 throw new LambdaJ.LambdaJError(true, "caught exception %s", e.getMessage(), e);
             }
-        }
-
-        @Override
-        public LambdaJ.LambdaJSymbol intern(@NotNull LambdaJ.LambdaJSymbol symbol) {
-            LambdaJ.LambdaJSymbol prev = symbols.putIfAbsent(symbol.toString(), symbol);
-            if (prev != null) return prev;
-            return symbol;
-        }
-
-        @Override
-        public Iterator<LambdaJ.LambdaJSymbol> iterator() {
-            return symbols.values().iterator();
         }
     }
 
@@ -76,19 +81,20 @@ public class SerializeTest {
 
     @Test
     public void testSerializationParser() throws Exception {
-        byte[] program = sExpToByteArray("(+ 1 2)");
-        SerializationParser myParser = new SerializationParser(program);
+        final SerializationSymbolTable st = new SerializationSymbolTable();
+        final byte[] program = sExpToByteArray(st, "(+ 1 2)");
+        final SerializationParser myParser = new SerializationParser(st, program);
 
-        LambdaJ interp = new LambdaJ(myParser);
+        final LambdaJ interp = new LambdaJ(st);
 
-        Object result = interp.interpretExpressions(myParser, null, null, null);
+        final Object result = interp.interpretExpressions(myParser, null, null, null);
         assertEquals(3.0,  result);
     }
 
-    private static byte[] sExpToByteArray(String sExp) throws IOException {
-        LambdaJ.ObjectReader parser = LambdaJ.makeReader(new StringReader(sExp)::read);
-        ByteArrayOutputStream s = new ByteArrayOutputStream();
-        ObjectOutputStream os = new ObjectOutputStream(s);
+    private static byte[] sExpToByteArray(LambdaJ.SymbolTable st, String sExp) throws IOException {
+        final LambdaJ.ObjectReader parser = LambdaJ.makeReader(new StringReader(sExp)::read, st, null);
+        final ByteArrayOutputStream s = new ByteArrayOutputStream();
+        final ObjectOutputStream os = new ObjectOutputStream(s);
         os.writeObject(parser.readObj(null));
         return s.toByteArray();
     }
