@@ -1,5 +1,3 @@
-read-from-string ignoriert features:
-(read-from-string "#+murmel 1 2) ; -> 2, sollte 1 sein
 
 mlib splitten: CL-compat rausziehen
 
