@@ -1,6 +1,7 @@
 
 Changes in JMurmel-1.4.4 relative to JMurmel-1.4.3
 
+ * fixed read-from-string: handle feature-expressions correctly, intern symbols correctly
  * fixed compiled random-state-p and make-random-state
 
 
